--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,15 +1,14 @@
 /* Component enclosing tag */
 .Contact {
     padding: 1em;
-    margin: 200px auto;
+    margin: 50px auto;
     background: #555;
     width: 220px;
     display: flex;
     align-items: center;
 }
 
-/* Contact image */
-.Contact .avatar {
+/* Contact image */.Contact .avatar {
     border-radius: 50%;
     margin-right: 1em;
     width: 48px;
